--- a/formulario.html
+++ b/formulario.html
@@ -8,13 +8,15 @@
 <body>
     <h1>Formulário de cadastro</h1>
     <form>
-        <label for="nome">Nome</label>
-        <input id="nome" type="nome" /><br/>
-        <label for="email">E-mail</label>
-        <input id="email" type="email" /><br/>
-        <label for="senha">Senha</label>
-        <input id="email" type="email" /><br/>
-        <button submit>Cadastrar</button>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome"><br/>
+
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email"><br/>
+
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha" name="senha"><br/>
+        <button type="submit">Cadastrar</button>
     </form>
 </body>
 </html>
